# gtk-raylib

./: .gitignore  README.md  meson.build
src/: gtk-raylib-context.c  gtk-raylib-context.h  gtkraylib.h
subprojects/: raylib.wrap
